src/parsing/PseudoCodeAnalyzerParser.py
# Generated from PseudoCodeAnalyzer.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class PseudoCodeAnalyzerParser ( Parser ):

    grammarFileName = "PseudoCodeAnalyzer.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'{'", "'}'", "';'", "'begin'", "'end'", 
                     "'Clase'", "'NULL'", "'for'", "'to'", "'while'", "'repeat'", 
                     "'until'", "'If'", "'then'", "'else'", "'do'", "'CALL'", 
                     "'<-'", "<INVALID>", "'+'", "'-'", "'*'", "'/'", "'mod'", 
                     "'div'", "'\\u00E2\\u201D\\u0152'", "'\\u00E2\\u201D\\u201D'", 
                     "'.'", "'<'", "'>'", "'\\u00E2\\u2030\\u00A4'", "'\\u00E2\\u2030\\u00A5'", 
                     "'='", "'\\u00E2\\u2030\\u00A0'", "'and'", "'or'", 
                     "'not'", "'T'", "'F'", "','", "'('", "')'", "'['", 
                     "']'", "'..'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "BEGIN", "END", "CLASS", "NULL", "FOR", "TO", "WHILE", 
                      "REPEAT", "UNTIL", "IF", "THEN", "ELSE", "DO", "CALL", 
                      "ASSIGN", "COMMENT", "OP_ADD", "OP_SUB", "OP_MUL", 
                      "OP_DIV_REAL", "OP_MOD", "OP_DIV_ENTERA", "CEIL", 
                      "FLOOR", "DOT", "OP_LT", "OP_GT", "OP_LE", "OP_GE", 
                      "OP_EQ", "OP_NE", "OP_AND", "OP_OR", "OP_NOT", "TRUE", 
                      "FALSE", "COLON", "LPAREN", "RPAREN", "LBRACKET", 
                      "RBRACKET", "RANGE", "ID", "NUMBER", "WS" ]

    RULE_program = 0
    RULE_class_declaration = 1
    RULE_local_vars_declaration = 2
    RULE_subroutine_declaration = 3
    RULE_parameter_declaration = 4
    RULE_statement_list = 5
    RULE_statement = 6
    RULE_assignment = 7
    RULE_variable = 8
    RULE_for_loop = 9
    RULE_while_loop = 10
    RULE_repeat_loop = 11
    RULE_if_statement = 12
    RULE_call_statement = 13
    RULE_expression = 14

    ruleNames =  [ "program", "class_declaration", "local_vars_declaration", 
                   "subroutine_declaration", "parameter_declaration", "statement_list", 
                   "statement", "assignment", "variable", "for_loop", "while_loop", 
                   "repeat_loop", "if_statement", "call_statement", "expression" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    BEGIN=4
    END=5
    CLASS=6
    NULL=7
    FOR=8
    TO=9
    WHILE=10
    REPEAT=11
    UNTIL=12
    IF=13
    THEN=14
    ELSE=15
    DO=16
    CALL=17
    ASSIGN=18
    COMMENT=19
    OP_ADD=20
    OP_SUB=21
    OP_MUL=22
    OP_DIV_REAL=23
    OP_MOD=24
    OP_DIV_ENTERA=25
    CEIL=26
    FLOOR=27
    DOT=28
    OP_LT=29
    OP_GT=30
    OP_LE=31
    OP_GE=32
    OP_EQ=33
    OP_NE=34
    OP_AND=35
    OP_OR=36
    OP_NOT=37
    TRUE=38
    FALSE=39
    COLON=40
    LPAREN=41
    RPAREN=42
    LBRACKET=43
    RBRACKET=44
    RANGE=45
    ID=46
    NUMBER=47
    WS=48

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(PseudoCodeAnalyzerParser.EOF, 0)

        def class_declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PseudoCodeAnalyzerParser.Class_declarationContext)
            else:
                return self.getTypedRuleContext(PseudoCodeAnalyzerParser.Class_declarationContext,i)


        def subroutine_declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PseudoCodeAnalyzerParser.Subroutine_declarationContext)
            else:
                return self.getTypedRuleContext(PseudoCodeAnalyzerParser.Subroutine_declarationContext,i)


        def getRuleIndex(self):
            return PseudoCodeAnalyzerParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = PseudoCodeAnalyzerParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 32 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 32
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [6]:
                    self.state = 30
                    self.class_declaration()
                    pass
                elif token in [46]:
                    self.state = 31
                    self.subroutine_declaration()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 34 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==6 or _la==46):
                    break

            self.state = 36
            self.match(PseudoCodeAnalyzerParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_declarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(PseudoCodeAnalyzerParser.CLASS, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(PseudoCodeAnalyzerParser.ID)
            else:
                return self.getToken(PseudoCodeAnalyzerParser.ID, i)

        def getRuleIndex(self):
            return PseudoCodeAnalyzerParser.RULE_class_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClass_declaration" ):
                listener.enterClass_declaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClass_declaration" ):
                listener.exitClass_declaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClass_declaration" ):
                return visitor.visitClass_declaration(self)
            else:
                return visitor.visitChildren(self)




    def class_declaration(self):

        localctx = PseudoCodeAnalyzerParser.Class_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_class_declaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 38
            self.match(PseudoCodeAnalyzerParser.CLASS)
            self.state = 39
            self.match(PseudoCodeAnalyzerParser.ID)
            self.state = 40
            self.match(PseudoCodeAnalyzerParser.T__0)
            self.state = 41
            self.match(PseudoCodeAnalyzerParser.ID)
            self.state = 45
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==46:
                self.state = 42
                self.match(PseudoCodeAnalyzerParser.ID)
                self.state = 47
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 48
            self.match(PseudoCodeAnalyzerParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Local_vars_declarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(PseudoCodeAnalyzerParser.CLASS, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(PseudoCodeAnalyzerParser.ID)
            else:
                return self.getToken(PseudoCodeAnalyzerParser.ID, i)

        def LBRACKET(self, i:int=None):
            if i is None:
                return self.getTokens(PseudoCodeAnalyzerParser.LBRACKET)
            else:
                return self.getToken(PseudoCodeAnalyzerParser.LBRACKET, i)

        def RBRACKET(self, i:int=None):
            if i is None:
                return self.getTokens(PseudoCodeAnalyzerParser.RBRACKET)
            else:
                return self.getToken(PseudoCodeAnalyzerParser.RBRACKET, i)

        def COLON(self, i:int=None):
            if i is None:
                return self.getTokens(PseudoCodeAnalyzerParser.COLON)
            else:
                return self.getToken(PseudoCodeAnalyzerParser.COLON, i)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PseudoCodeAnalyzerParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(PseudoCodeAnalyzerParser.ExpressionContext,i)


        def getRuleIndex(self):
            return PseudoCodeAnalyzerParser.RULE_local_vars_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLocal_vars_declaration" ):
                listener.enterLocal_vars_declaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLocal_vars_declaration" ):
                listener.exitLocal_vars_declaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLocal_vars_declaration" ):
                return visitor.visitLocal_vars_declaration(self)
            else:
                return visitor.visitChildren(self)




    def local_vars_declaration(self):

        localctx = PseudoCodeAnalyzerParser.Local_vars_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_local_vars_declaration)
        self._la = 0 # Token type
        try:
            self.state = 75
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [6]:
                self.enterOuterAlt(localctx, 1)
                self.state = 50
                self.match(PseudoCodeAnalyzerParser.CLASS)
                self.state = 51
                self.match(PseudoCodeAnalyzerParser.ID)
                self.state = 52
                self.match(PseudoCodeAnalyzerParser.ID)
                pass
            elif token in [46]:
                self.enterOuterAlt(localctx, 2)
                self.state = 53
                self.match(PseudoCodeAnalyzerParser.ID)
                self.state = 59
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==43:
                    self.state = 54
                    self.match(PseudoCodeAnalyzerParser.LBRACKET)
                    self.state = 56
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if (((_la) & ~0x3f) == 0 and ((1 << _la) & 214267395571840) != 0):
                        self.state = 55
                        self.expression(0)


                    self.state = 58
                    self.match(PseudoCodeAnalyzerParser.RBRACKET)


                self.state = 72
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==40:
                    self.state = 61
                    self.match(PseudoCodeAnalyzerParser.COLON)
                    self.state = 62
                    self.match(PseudoCodeAnalyzerParser.ID)
                    self.state = 68
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==43:
                        self.state = 63
                        self.match(PseudoCodeAnalyzerParser.LBRACKET)
                        self.state = 65
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if (((_la) & ~0x3f) == 0 and ((1 << _la) & 214267395571840) != 0):
                            self.state = 64
                            self.expression(0)


                        self.state = 67
                        self.match(PseudoCodeAnalyzerParser.RBRACKET)


                    self.state = 74
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Subroutine_declarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(PseudoCodeAnalyzerParser.ID, 0)

        def LPAREN(self):
            return self.getToken(PseudoCodeAnalyzerParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(PseudoCodeAnalyzerParser.RPAREN, 0)

        def BEGIN(self):
            return self.getToken(PseudoCodeAnalyzerParser.BEGIN, 0)

        def statement_list(self):
            return self.getTypedRuleContext(PseudoCodeAnalyzerParser.Statement_listContext,0)


        def END(self):
            return self.getToken(PseudoCodeAnalyzerParser.END, 0)

        def parameter_declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PseudoCodeAnalyzerParser.Parameter_declarationContext)
            else:
                return self.getTypedRuleContext(PseudoCodeAnalyzerParser.Parameter_declarationContext,i)


        def local_vars_declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PseudoCodeAnalyzerParser.Local_vars_declarationContext)
            else:
                return self.getTypedRuleContext(PseudoCodeAnalyzerParser.Local_vars_declarationContext,i)


        def COLON(self, i:int=None):
            if i is None:
                return self.getTokens(PseudoCodeAnalyzerParser.COLON)
            else:
                return self.getToken(PseudoCodeAnalyzerParser.COLON, i)

        def getRuleIndex(self):
            return PseudoCodeAnalyzerParser.RULE_subroutine_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSubroutine_declaration" ):
                listener.enterSubroutine_declaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSubroutine_declaration" ):
                listener.exitSubroutine_declaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSubroutine_declaration" ):
                return visitor.visitSubroutine_declaration(self)
            else:
                return visitor.visitChildren(self)




    def subroutine_declaration(self):

        localctx = PseudoCodeAnalyzerParser.Subroutine_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_subroutine_declaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self.match(PseudoCodeAnalyzerParser.ID)
            self.state = 78
            self.match(PseudoCodeAnalyzerParser.LPAREN)
            self.state = 87
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==6 or _la==46:
                self.state = 79
                self.parameter_declaration()
                self.state = 84
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==40:
                    self.state = 80
                    self.match(PseudoCodeAnalyzerParser.COLON)
                    self.state = 81
                    self.parameter_declaration()
                    self.state = 86
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 89
            self.match(PseudoCodeAnalyzerParser.RPAREN)
            self.state = 90
            self.match(PseudoCodeAnalyzerParser.BEGIN)
            self.state = 96
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,11,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 91
                    self.local_vars_declaration()
                    self.state = 92
                    self.match(PseudoCodeAnalyzerParser.T__2) 
                self.state = 98
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,11,self._ctx)

            self.state = 99
            self.statement_list()
            self.state = 100
            self.match(PseudoCodeAnalyzerParser.END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Parameter_declarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(PseudoCodeAnalyzerParser.CLASS, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(PseudoCodeAnalyzerParser.ID)
            else:
                return self.getToken(PseudoCodeAnalyzerParser.ID, i)

        def LBRACKET(self, i:int=None):
            if i is None:
                return self.getTokens(PseudoCodeAnalyzerParser.LBRACKET)
            else:
                return self.getToken(PseudoCodeAnalyzerParser.LBRACKET, i)

        def RBRACKET(self, i:int=None):
            if i is None:
                return self.getTokens(PseudoCodeAnalyzerParser.RBRACKET)
            else:
                return self.getToken(PseudoCodeAnalyzerParser.RBRACKET, i)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PseudoCodeAnalyzerParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(PseudoCodeAnalyzerParser.ExpressionContext,i)


        def getRuleIndex(self):
            return PseudoCodeAnalyzerParser.RULE_parameter_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameter_declaration" ):
                listener.enterParameter_declaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameter_declaration" ):
                listener.exitParameter_declaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameter_declaration" ):
                return visitor.visitParameter_declaration(self)
            else:
                return visitor.visitChildren(self)




    def parameter_declaration(self):

        localctx = PseudoCodeAnalyzerParser.Parameter_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_parameter_declaration)
        self._la = 0 # Token type
        try:
            self.state = 116
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,14,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 102
                self.match(PseudoCodeAnalyzerParser.CLASS)
                self.state = 103
                self.match(PseudoCodeAnalyzerParser.ID)
                self.state = 104
                self.match(PseudoCodeAnalyzerParser.ID)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 105
                self.match(PseudoCodeAnalyzerParser.ID)
                self.state = 111 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 106
                    self.match(PseudoCodeAnalyzerParser.LBRACKET)
                    self.state = 108
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if (((_la) & ~0x3f) == 0 and ((1 << _la) & 214267395571840) != 0):
                        self.state = 107
                        self.expression(0)


                    self.state = 110
                    self.match(PseudoCodeAnalyzerParser.RBRACKET)
                    self.state = 113 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==43):
                        break

                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 115
                self.match(PseudoCodeAnalyzerParser.ID)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Statement_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PseudoCodeAnalyzerParser.StatementContext)
            else:
                return self.getTypedRuleContext(PseudoCodeAnalyzerParser.StatementContext,i)


        def getRuleIndex(self):
            return PseudoCodeAnalyzerParser.RULE_statement_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement_list" ):
                listener.enterStatement_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement_list" ):
                listener.exitStatement_list(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement_list" ):
                return visitor.visitStatement_list(self)
            else:
                return visitor.visitChildren(self)




    def statement_list(self):

        localctx = PseudoCodeAnalyzerParser.Statement_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_statement_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 70368744320256) != 0):
                self.state = 118
                self.statement()
                self.state = 119
                self.match(PseudoCodeAnalyzerParser.T__2)
                self.state = 125
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignment(self):
            return self.getTypedRuleContext(PseudoCodeAnalyzerParser.AssignmentContext,0)


        def for_loop(self):
            return self.getTypedRuleContext(PseudoCodeAnalyzerParser.For_loopContext,0)


        def while_loop(self):
            return self.getTypedRuleContext(PseudoCodeAnalyzerParser.While_loopContext,0)


        def repeat_loop(self):
            return self.getTypedRuleContext(PseudoCodeAnalyzerParser.Repeat_loopContext,0)


        def if_statement(self):
            return self.getTypedRuleContext(PseudoCodeAnalyzerParser.If_statementContext,0)


        def call_statement(self):
            return self.getTypedRuleContext(PseudoCodeAnalyzerParser.Call_statementContext,0)


        def getRuleIndex(self):
            return PseudoCodeAnalyzerParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = PseudoCodeAnalyzerParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_statement)
        try:
            self.state = 132
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [46]:
                self.enterOuterAlt(localctx, 1)
                self.state = 126
                self.assignment()
                pass
            elif token in [8]:
                self.enterOuterAlt(localctx, 2)
                self.state = 127
                self.for_loop()
                pass
            elif token in [10]:
                self.enterOuterAlt(localctx, 3)
                self.state = 128
                self.while_loop()
                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 4)
                self.state = 129
                self.repeat_loop()
                pass
            elif token in [13]:
                self.enterOuterAlt(localctx, 5)
                self.state = 130
                self.if_statement()
                pass
            elif token in [17]:
                self.enterOuterAlt(localctx, 6)
                self.state = 131
                self.call_statement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable(self):
            return self.getTypedRuleContext(PseudoCodeAnalyzerParser.VariableContext,0)


        def ASSIGN(self):
            return self.getToken(PseudoCodeAnalyzerParser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(PseudoCodeAnalyzerParser.ExpressionContext,0)


        def getRuleIndex(self):
            return PseudoCodeAnalyzerParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment" ):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)




    def assignment(self):

        localctx = PseudoCodeAnalyzerParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            self.variable()
            self.state = 135
            self.match(PseudoCodeAnalyzerParser.ASSIGN)
            self.state = 136
            self.expression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(PseudoCodeAnalyzerParser.ID)
            else:
                return self.getToken(PseudoCodeAnalyzerParser.ID, i)

        def LBRACKET(self, i:int=None):
            if i is None:
                return self.getTokens(PseudoCodeAnalyzerParser.LBRACKET)
            else:
                return self.getToken(PseudoCodeAnalyzerParser.LBRACKET, i)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PseudoCodeAnalyzerParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(PseudoCodeAnalyzerParser.ExpressionContext,i)


        def RBRACKET(self, i:int=None):
            if i is None:
                return self.getTokens(PseudoCodeAnalyzerParser.RBRACKET)
            else:
                return self.getToken(PseudoCodeAnalyzerParser.RBRACKET, i)

        def DOT(self):
            return self.getToken(PseudoCodeAnalyzerParser.DOT, 0)

        def getRuleIndex(self):
            return PseudoCodeAnalyzerParser.RULE_variable

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariable" ):
                listener.enterVariable(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariable" ):
                listener.exitVariable(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariable" ):
                return visitor.visitVariable(self)
            else:
                return visitor.visitChildren(self)




    def variable(self):

        localctx = PseudoCodeAnalyzerParser.VariableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_variable)
        try:
            self.state = 151
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,18,self._ctx)
            if la_ == 1:
